Revision history for Perl extension App::Info.

0.57
      - Removed `Makefile.PL`. It used Module::Build internally, which is
        deprecated.

0.56  2011-02-22T21:02:39
      - Added `cgibin_physical()` and `cgibin_virtual()` to
        SVN::Notify::HTTPD::Apache. Patch from Martin Thurn.
      - Removed some superfluous `use Config;`s.
      - Added workaround for a bizarre crash when accessing `%Config` via
        `grep` on ActivePerl
        ([bug](http://bugs.activestate.com/show_bug.cgi?id=89447)). Thanks to
        Christian Walde for the analysis.
      - Fixed warning in `t/apache_info.t`.

0.55  2008-07-18T16:18:12
      - Fixed some test failures on Windows boxes with PostgreSQL installed.
        Patch from Taro Nishino.

0.54  2008-05-18T04:01:50
      - Added the doc_root() method to App::Info::HTTPD::Apache. Patch
        from Martin Thurn.
      - Added an undistributed spell-checking test, which means that the
        documentation has many fewer spelling errors.

0.53  2008-05-05T17:47:18
      - Added the "configure_requires" and "build_requires" parameters to
        Build.PL.
      - Updated Copyright.

0.52  2007-08-13T18:24:54
      - Fixed test failures on Win32 in 't/util.t.' Reported by Alex Chorny
        via the cpan-testers mail list.
      - Fixed test failure in 't/util.t' for those who happen to have an
        INTERCAL compiler installed. Reported by David Cantrell.

0.51  2006-09-25T17:52:53
      - Really fixed the unsorted test failure by putting the sort in the
        right place.
      - The code that creates the 't/scripts' directory now runs during the
        'code' action rather than the 'build' action, allowing the tests to
        run properly when the 'build' action has not been run. Reported By
        Alex Chorny (Ticket # 21281).
      - Fixed test failures under bleedperl where Carp was not properly
        loaded. Reported by Andreas Koenig (Ticket # 21641).