@@ -3,6 +3,7 @@ Revision history for Perl extension App::Info.
 0.57
       - Removed `Makefile.PL`. It used Module::Build internally, which is
         deprecated.
+      - Moved repository to [GitHub](https://github.com/theory/app-info/).
 
 0.56  2011-02-22T21:02:39
       - Added `cgibin_physical()` and `cgibin_virtual()` to
